# LamaStaticAnalyzer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  run_tests.sh
cmake/: utils.cmake
src/: Interpreter.cpp  Interpreter.hpp  LamaRuntime.hpp  Main.cpp  Opcodes.hpp  Types.hpp  Utils.hpp
